--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -20,7 +20,7 @@
             <div class="columns">
                 <div class="column is-half">
                     <p class="control has-icons-left has-icons-right">
-                        <input class="validate input input-fancy is-rounded" id = "first_name" type="text" name="nome" placeholder="Usuário">
+                        <input class="validate input input-fancy borda-arredondada" id = "first_name" type="text" name="nome" placeholder="Usuário">
                         <span class="icon is-small is-left">
                               <i class="fas fa-user"></i>
                         </span>
@@ -29,7 +29,7 @@
             <div class="columns">
                 <div class = "column is-half">
                     <p class="control has-icons-left has-icons-right">
-                        <input class="validate input input-fancy is-rounded" id="password" type="password" name="senha" placeholder="Senha">
+                        <input class="validate input input-fancy borda-arredondada" id="password" type="password" name="senha" placeholder="Senha">
                         <span class="icon is-small is-left">
                             <i class="fas fa-lock"></i>
                          </span>
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <button class="button verde-viavida is-medium is-rounded" type="submit" name="action" onclick="">Entrar</button>
+            <button class="button verde-viavida is-medium borda-arredondada" type="submit" name="action" onclick="">Entrar</button>
 
                 <div class="recuperar">
                     <p><a href="#">Esqueci minha senha</a></p>
