--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -8,11 +8,11 @@
     <div class="container">
         <div class="columns">
             <div class="column">
-                <h1 class="title is-1 center dados-paciente has-text-centered">Solicitação de Vaga</h1>
+                <h2 class="title is-2 center dados-paciente has-text-centered">Solicitação de Vaga</h2>
             </div>
         </div>
         <div class="column">
-            <h2 class="subtitle is-2 v center has-text-centered"> Dados do paciente</h2>
+            <h3 class="title is-3 v center has-text-centered"> Dados do paciente</h3>
         </div>
         <div class="columns is-mobile card-content">
             <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post" onsubmit="return validaCadastroSolicitacao(event)" id="formSolicitacao">
@@ -150,7 +150,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <h3 class="subtitle is-3">Endereço</h3>
+                            <h4 class="title is-4">Endereço</h4>
                             <span>Logradouro:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{endereco.rua}" type="text">
                         </div>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <h4 class="title subtitle is-3">Dados do Acompanhante</h4>
+                    <h4 class="title is-4">Dados do Acompanhante</h4>
                     <h5 class="subtitle is-6 campo-obrigatorio">(Os campos do acompanhante 1 são obrigatórios)</h5>
                 </div>
                 <div th:each="acompanhante, acompIndex : ${solicitacao.acompanhantes}">
