--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -19,7 +19,7 @@
                     <h1 class="title is-half centralizar espacamento">Lista de Solicitações</h1>
                     <form th:action="@{/solicitacao/cadastro}" method="GET">
                         <div class="is-centered is-half centralizar espacamento">
-                            <input type="submit" class="button verde-viavida" value="Solicitar Vaga" />
+                            <input type="submit" class="button verde-viavida borda-arredondada" value="Solicitar Vaga" />
                         </div>
                     </form>
                     <div class="is-mobile is-centered">
