--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -15,6 +15,7 @@ button{
     align-items: center;
     background-color: rgba(56, 124, 43, 1);
     text-decoration-color: rgba(222, 222, 222, 1);
+    margin-right: 10px;
 }
 
 .borda-arredondada {
