<@brendamoniqueb, @diovanemendes> Atualiza com a master e tira linhas comentadas

--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -8,7 +8,7 @@
 <main>
     <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
     <div class="column has-text-centered">
-        <a class="button verde-viavida" th:href="@{/solicitacao/casa/lista}">Voltar</a>
+        <a class="button verde-viavida borda-arredondada" th:href="@{/solicitacao/casa/lista}">Voltar</a>
     </div>
 
     <h1 class="title has-text-centered espacamento-titulo">Mapa dos quartos</h1>
