--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -40,6 +40,16 @@
                         Voltar
                     </button>
                 </a>
+
+            <div>
+                <a th:href="@{/solicitacao/csv}">
+                    <button type="submit" class="button verde-viavida is-rounded">
+                        Exportar para EXCEL
+                    </button>
+                </a>
+            </div>
+
+            <a class="button verde-viavida" href="/">Voltar</a>
         </div>
     </div>
 </main>
