<@vicfraga, @ingridDuarte> Atualiza com a master

--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -42,6 +42,21 @@
                     </div>
                 </div>
             </div>
+                <a href="/">
+                    <button type="submit" class="button verde-viavida borda-arredondada">
+                        Voltar
+                    </button>
+                </a>
+
+            <div>
+                <a th:href="@{/solicitacao/csv}">
+                    <button type="submit" class="button verde-viavida is-rounded">
+                        Exportar para EXCEL
+                    </button>
+                </a>
+            </div>
+
+            <a class="button verde-viavida" href="/">Voltar</a>
         </div>
     </div>
 </main>
