<@eduarda96, @diovanemendes> Mostra hospede cadastrado no quarto, acompnhantes ocupam o mesmo leito

--- a/app/src/main/resources/templates/partes/cabecalhoDadosSolicitante.html
+++ b/app/src/main/resources/templates/partes/cabecalhoDadosSolicitante.html
@@ -13,7 +13,7 @@
             <label>
                 <b>Número de acompanhantes:</b>
             </label>
-            <label th:text="${numeroHospedes - 1}"></label>
+            <label th:text="${numeroHospedes}"></label>
         </p>
     </div>
 </div>
