--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -25,7 +25,7 @@ button{
 
 .input-radio {
     border: 1px solid red;
-    margin-left:5px;
+    margin-left:10px;
 }
 
 .campo-obrigatorio {
@@ -68,22 +68,12 @@ button{
     padding-bottom: 3vh;
 }
 
-.footer{
-    padding: 15px;
-    background-color: rgba(222, 222, 222, 1);
-    color: rgba(121, 121, 121, 1);
-    border-top: 1px solid rgba(121, 121, 121, 1);
-    position: fixed;
-    bottom:0;
-    width:100%;
-}
-
 .margin-invisible {
     border-color: transparent;
 }
 
 .navbar {
-    background-color: rgba(56, 124, 43,1);
+    background-color: rgba(141, 198, 63, 1);
     position: relative;
     width:100%;
 }
@@ -124,7 +114,7 @@ button{
 }
 
 .verde-viavida {
-    background-color: rgba(56, 124, 43, 1);
+    background-color: rgba(141, 198, 63, 1);
     border-color: transparent;
     color: #fff;
 }
@@ -173,6 +163,10 @@ button{
     display: flex;
 }
 
+.tamanho-board {
+    width: 260%;
+}
+
 .width-100 {
     width: 100%;
 }
@@ -180,4 +174,15 @@ button{
 .width-50 {
     width: 50%;
 }
+.header-heigth{
+    height: 60px;
+}
 
+.header-color {
+    background-color: rgba(73, 145, 71, 1);
+}
+
+.message-body a {
+    text-decoration: none!important;
+
+}
