--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:replace="~{layoutSemMenu :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Login</title>
