--- a/app/src/main/resources/templates/solicitacao/editaPaciente.html
+++ b/app/src/main/resources/templates/solicitacao/editaPaciente.html
@@ -7,25 +7,22 @@
 <body>
 <main>
     <div class="card-content valign center has-text-centered">
-        <div class="columns">
+        <div class="column">
+            <h3 class="title is-3 v center has-text-centered"> Dados do paciente</h3>
+        </div>
+        <div class="columns is-mobile card-content">
             <form th:object="${solicitacao}" th:action="@{/solicitacao/{id}/editar(id=${solicitacao.id})}" method="post" onsubmit="return validaCadastroSolicitacao(event)"
                   id="formSolicitacao">
-                <h3 class="title is-3">Dados do Paciente</h3>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Nome </label>
-                        </div>
+                <div class="column">
+                    <div class="field">
                         <div class="control">
+                            <span>Nome </span>
                             <input class="validate input input-fancy borda-arredondada" type="text" th:field="*{nome}">
                         </div>
                     </div>
                 </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Gênero</label>
-                        </div>
+                <div class="column">
+                    <div class="field">
                         <div class="control">
                             <label>
                                 <input th:field="*{genero}" type="radio" value="F" id="genero1">
@@ -48,12 +45,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Situação</label>
-                        </div>
+                <div class="column">
+                    <div class="field">
                         <div class="control">
+                            <span>Peso:</span>
+                            <input class="validate input input-fancy borda-arredondada" placeholder="Só preencha se for cadeirante" type="number" min="0" max="600" step="0.1" id="peso" value="0"  th:field="*{peso}" >
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
+                            <span>Situação:</span>
                             <label>
                                 <input th:field="*{situacao}" type="radio" value="pre" id="situacao.pre">
                                 <span>Pré-transplante</span>
@@ -75,53 +78,40 @@
                         </div>
                     </div>
                 </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Telefone</label>
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
+                            <span>Telefone</span>
                         </div>
                         <div class="control">
                             <input class="validate input input-fancy borda-arredondada" type="text" name="telefone" th:field="*{telefone}">
                         </div>
                     </div>
                 </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Peso</label>
-                        </div>
+
+                <div class="column">
+                    <div class="field">
                         <div class="control">
-                            <input class="validate input input-fancy borda-arredondada" type="number" min="0" max="600" step="0.1" id="peso" value="0"  th:field="*{peso}" >
-                        </div>
-                    </div>
-                </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Data de Entrada</label>
-                        </div>
-                        <div class="control">
+                            <span>Data de Entrada</span>
                             <input class="validate input input-fancy datepicker-retroativo borda-arredondada" autocomplete="off" type="text" name="dataEntrada" th:field="*{dataEntrada}"
                                    onkeypress="return false;">
                         </div>
                     </div>
                 </div>
 
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Data de Saída</label>
-                        </div>
+                <div class="column">
+                    <div class="field">
                         <div class="control">
+                            <span>Data de Saída</span>
                             <input class="validate input input-fancy datepicker-futuro" autocomplete="off" type="text" name="dataSaida" th:field="*{dataSaida}"
                                    onkeypress="return false;">
                         </div>
                     </div>
                 </div>
                 <h3 class="title is-3">Endereço</h3>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
                             <label class="label">Rua</label>
                         </div>
                         <div class="control">
@@ -130,9 +120,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
                             <label class="label">Número</label>
                         </div>
                         <div class="control">
@@ -140,10 +130,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label">Cidade</label>
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
+                            <span>Cidade</label>
                         </div>
                         <div class="control">
                             <input class="validate input input-fancy borda-arredondada" type="text" name="cidade" th:field="*{endereco.cidade}">
@@ -151,9 +141,9 @@
                     </div>
                 </div>
 
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
                             <label class="label">Bairro</label>
                         </div>
                         <div class="control">
@@ -163,9 +153,9 @@
 
                 </div>
 
-                <div class="column is-10">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
                             <label class="label">UF</label>
                         </div>
                         <div class="control">
@@ -177,9 +167,9 @@
                 <div th:each="acompanhante, acompIndex : ${solicitacao.acompanhantes}">
                     <input class="validate input input-fancy borda-arredondada" type="hidden" th:field="*{acompanhantes[__${acompIndex.index}__].id}" />
                     <h5 class="title is-5">Acompanhante</h5>
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
+                    <div class="column">
+                        <div class="field">
+                            <div class="control">
                                 <label class="label">Nome</label>
                             </div>
                             <div class="control">
@@ -189,9 +179,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
+                    <div class="column">
+                        <div class="field">
+                            <div class="control">
                                 <label class="label">Gênero</label>
                             </div>
                             <div class="control">
@@ -206,9 +196,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column is-10">
-                        <div class="field is-horizontal">
-                            <div class="field-label is-normal">
+                    <div class="column">
+                        <div class="field">
+                            <div class="control">
                                 <label class="label">Data de Nascimento</label>
                             </div>
                             <div class="control">
